@@ -1,8 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.8
 Date: ??.01.2024
+  Compatibility:
+    - Mods can now force the victory, even if it has been reached before.
+    - Mods can now specify a custom victory message. This message can optionally be different for winners and losers.
   Changes:
-    - Compatible mods can now force the victory, even if it has been reached before.
     - More consistent and safer formatting of numbers. Now with working unit tests.
     - Add some Cargo Ships statistics.
   Bugfixes:
